# astro-immo

./: .env.dist  .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json  vercel.json
api/: index.py
src/: env.d.ts  middleware.test.ts  middleware.ts
src/api/: auth.py  cloudinary.py  database.py  main.py  models.py  seed.py
src/api/routers/: agents.py  auth.py  biens.py  clients.py  stats.py
src/components/: Welcome.astro
src/layouts/: Dashboard.astro  Layout.astro  Public.astro
src/lib/: api.test.ts  api.ts  jwt.ts
src/pages/: index.astro  login.astro
src/pages/biens/: [id].astro  index.astro
src/pages/dashboard/: index.astro
src/pages/dashboard/admin/agents/: index.astro  nouveau.astro
src/pages/dashboard/admin/agents/[id]/: modifier.astro
src/pages/dashboard/biens/: index.astro  nouveau.astro
src/pages/dashboard/biens/[id]/: modifier.astro
src/pages/dashboard/clients/: index.astro  nouveau.astro
src/pages/dashboard/clients/[id]/: modifier.astro
tests/: conftest.py  test_auth.py  test_biens.py  test_clients_agents_stats.py
